// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Card hoverable unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated memori-card--interactive"
    tabindex="0"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-card__header"
        >
          <div
            class="memori-card__title"
          >
            lorem-ipsum
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card loading unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin memori-spin--spinning"
      >
        <div
          class="memori-card__header"
        >
          <div
            class="memori-card__title"
          >
            Card title
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      />
    </div>
  </div>
</div>
`;

exports[`renders Card with children unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      >
        <p>
          Ciao
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with cover unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__cover"
    >
      <img
        alt=""
        src="#"
      />
    </div>
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      />
    </div>
  </div>
</div>
`;

exports[`renders Card with custom CSS class unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated lorem-ipsum"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      />
    </div>
  </div>
</div>
`;

exports[`renders Card with description unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-card__header"
        >
          <div
            class="memori-card__description"
          >
            Card description
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Card with title unchanged 1`] = `
<div>
  <div
    class="memori-card memori-card--elevated"
  >
    <div
      class="memori-card__body memori-card__body--padding-md"
    >
      <div
        class="memori-spin"
      >
        <div
          class="memori-card__header"
        >
          <div
            class="memori-card__title"
          >
            Card title
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
